--- a/package.json
+++ b/package.json
@@ -31,19 +31,20 @@
     "angular-cli": "^1.0.0-beta.4",
     "codelyzer": "0.0.14",
     "ember-cli-inject-live-reload": "^1.4.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.4.0",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
+    "node-sass": "^3.7.0",
     "protractor": "^3.3.0",
     "sass": "^0.5.0",
     "ts-node": "^0.5.5",
     "tslint": "^3.6.0",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1",
-    "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-sass": "^1.0.0"
+    "typings": "^0.8.1"
   }
 }
